# tildes-statistics

./: .env.example  .gitignore  Cargo.toml  Containerfile  Dockerfile  Makefile.toml  PRODUCTION.md  README.md  askama.toml  default.nix  derivation.nix  flake.nix  package.json  rustup-toolchain.toml  shell.nix
source/: main.rs  utilities.rs
source/assets/: mod.rs
source/charts/: mod.rs
source/cli/: mod.rs  run.rs
source/entities/: group_data.rs  mod.rs  prelude.rs  snapshot.rs
source/group_data/: mod.rs
source/migrations/: m20221004_000001_initial_setup.rs  mod.rs
source/scss/: common.scss  index.scss  mod.rs
source/snapshots/: create.rs  mod.rs
source/templates/: base.html  group.html  index.html  mod.rs
